--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,10 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<sonar.organization>etomi24</sonar.organization>
+  		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
-
+	
 	<dependencies>
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
